[gd_scene load_steps=4 format=3 uid="uid://b3gwi2usrwamy"]

[ext_resource type="Script" uid="uid://cq64ws4r8msse" path="res://components/magnet/Magnet.gd" id="1_u2hc3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_g5tck"]
radius = 30.0

[sub_resource type="CircleShape2D" id="CircleShape2D_a7yft"]

[node name="Magnet" type="Node2D"]
script = ExtResource("1_u2hc3")

[node name="MagnetArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="MagnetArea"]
shape = SubResource("CircleShape2D_g5tck")
debug_color = Color(0, 1, 0, 0.419608)

[node name="GatherArea" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GatherArea"]
shape = SubResource("CircleShape2D_a7yft")
debug_color = Color(0, 1, 0, 0.419608)

[connection signal="body_entered" from="MagnetArea" to="." method="_on_body_magneted"]
[connection signal="body_exited" from="MagnetArea" to="." method="_on_body_demagneted"]
[connection signal="body_entered" from="GatherArea" to="." method="_on_body_gathering"]
